Thu Feb 19 09:27:18 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * ciao/ComponentServer/CIAO_ComponentServer.mpc:
          Resolved linking error.

Wed Feb 18 20:52:18 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RepositoryManager/RepositoryManager.mpc:
          use the new minizip base project

Wed Feb 18 20:45:18 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/CIAO_Servant_Activator.mpc
          Set correct -I option

Wed Feb 18 20:26:18 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/ComponentServer/CCM_ComponentServer.mpc
          Set correct -I option

Wed Feb 18 20:21:18 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_ComponentServer.mpc:
          Set correct -I option

Wed Feb 18 20:01:18 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM.mpc:
          Set correct -I option

Wed Feb 18 12:31:18 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * CIAO-INSTALL.html:
          To build CIAO using Xerces one has to set xerces3=1 or
          xerces2=1 in default.features.

Wed Feb 18 08:51:18 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/RepositoryManager/Repository_Manager_Module.cpp:
        * MPC/config/dance_repository_manager.mpb:
        * MPC/config/dance_repository_manager_base.mpb:
          Resolved minor fuzz errors.

Wed Feb 18 00:52:18 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Deployment/Deployment_RepositoryManager.idl:
        * DAnCE/RepositoryManager/DAnCE_RepositoryManager_Module_Export.h:
        * DAnCE/RepositoryManager/RMadmin.cpp:
        * DAnCE/RepositoryManager/RepositoryManager.mpc:
        * DAnCE/RepositoryManager/RepositoryManager_Impl.h:
        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp:
        * DAnCE/RepositoryManager/Repository_Manager_Exec.cpp:
        * DAnCE/RepositoryManager/Repository_Manager_Module.h: