@@ -1,3 +1,8 @@
+Thu Feb 19 12:25:18 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tools/Config_Handlers/DataType_Handler.cpp:
+          Fixed GCC warning
+
 Thu Feb 19 09:27:18 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * ciao/ComponentServer/CIAO_ComponentServer.mpc:
